<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
    <device id="retina6_12" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="System colors in document resources" minToolsVersion="11.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeScreen" customModule="Cardx" customModuleProvider="target">
            <connections>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="Eg5-ec-LrD">
                    <rect key="frame" x="0.0" y="187" width="393" height="245"/>
                    <subviews>
                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="X7d-u9-996">
                            <rect key="frame" x="12" y="0.0" width="369" height="50"/>
                            <subviews>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nf9-eV-3qv">
                                    <rect key="frame" x="0.0" y="0.0" width="369" height="50"/>
                                    <state key="normal" title="Button"/>
                                    <buttonConfiguration key="configuration" style="filled" title="Test"/>
                                    <connections>
                                        <action selector="testButton:" destination="-1" eventType="touchUpInside" id="OxA-rf-AOa"/>
                                    </connections>
                                </button>
                            </subviews>
                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                            <constraints>
                                <constraint firstAttribute="trailing" secondItem="Nf9-eV-3qv" secondAttribute="trailing" id="9Mg-P2-E7L"/>
                                <constraint firstItem="Nf9-eV-3qv" firstAttribute="top" secondItem="X7d-u9-996" secondAttribute="top" id="Rvz-02-Tjr"/>
                                <constraint firstItem="Nf9-eV-3qv" firstAttribute="leading" secondItem="X7d-u9-996" secondAttribute="leading" id="WuQ-Zp-5KK"/>
                                <constraint firstAttribute="bottom" secondItem="Nf9-eV-3qv" secondAttribute="bottom" id="a4V-x7-NeO"/>
                            </constraints>
                        </view>
                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0FM-Nr-bC0">
                            <rect key="frame" x="12" y="65" width="369" height="50"/>
                            <subviews>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jaI-p7-PZy">
                                    <rect key="frame" x="0.0" y="0.0" width="369" height="50"/>
                                    <state key="normal" title="Button"/>
                                    <buttonConfiguration key="configuration" style="tinted" title="Add"/>
                                    <connections>
                                        <action selector="addNewCard:" destination="-1" eventType="touchUpInside" id="YPd-Pa-VFj"/>
                                    </connections>
                                </button>
                            </subviews>
                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="56" id="1Aq-rI-iSB"/>
                                <constraint firstAttribute="bottom" secondItem="jaI-p7-PZy" secondAttribute="bottom" id="B9n-AM-nuV"/>
                                <constraint firstAttribute="trailing" secondItem="jaI-p7-PZy" secondAttribute="trailing" id="HPh-lB-2iA"/>
                                <constraint firstItem="jaI-p7-PZy" firstAttribute="top" secondItem="0FM-Nr-bC0" secondAttribute="top" id="XJ9-ms-1wK"/>
                                <constraint firstItem="jaI-p7-PZy" firstAttribute="leading" secondItem="0FM-Nr-bC0" secondAttribute="leading" id="jh6-m6-IdK"/>
                            </constraints>
                        </view>
                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rtN-76-P9e">
                            <rect key="frame" x="12" y="130" width="369" height="50"/>
                            <subviews>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="foA-aM-6A1">
                                    <rect key="frame" x="0.0" y="0.0" width="369" height="50"/>
                                    <state key="normal" title="Button"/>
                                    <buttonConfiguration key="configuration" style="tinted" title="Play"/>
                                    <connections>
                                        <action selector="displayCards:" destination="-1" eventType="touchUpInside" id="Oxu-Qv-HgI"/>
                                    </connections>
                                </button>
                            </subviews>
                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                            <constraints>
                                <constraint firstAttribute="trailing" secondItem="foA-aM-6A1" secondAttribute="trailing" id="7yk-AL-kqt"/>
                                <constraint firstAttribute="bottom" secondItem="foA-aM-6A1" secondAttribute="bottom" id="Cid-nu-k3H"/>
                                <constraint firstItem="foA-aM-6A1" firstAttribute="leading" secondItem="rtN-76-P9e" secondAttribute="leading" id="Q3E-6M-HF2"/>
                                <constraint firstItem="foA-aM-6A1" firstAttribute="top" secondItem="rtN-76-P9e" secondAttribute="top" id="UKI-uO-GRN"/>
                            </constraints>
                        </view>
                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DMa-Cs-xG8">
                            <rect key="frame" x="12" y="195" width="369" height="50"/>
                            <subviews>
                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LGa-M9-cvh">
                                    <rect key="frame" x="0.0" y="0.0" width="369" height="50"/>
                                    <state key="normal" title="Button"/>
                                    <buttonConfiguration key="configuration" style="tinted" title="Settings"/>
                                    <connections>
                                        <action selector="openSettings:" destination="-1" eventType="touchUpInside" id="Cdi-Em-5xR"/>
                                    </connections>
                                </button>
                            </subviews>
                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                            <constraints>
                                <constraint firstAttribute="bottom" secondItem="LGa-M9-cvh" secondAttribute="bottom" id="33R-sk-zG4"/>
                                <constraint firstItem="LGa-M9-cvh" firstAttribute="top" secondItem="DMa-Cs-xG8" secondAttribute="top" id="DSq-h8-0ck"/>
                                <constraint firstAttribute="trailing" secondItem="LGa-M9-cvh" secondAttribute="trailing" id="WVT-vI-vyT"/>
                                <constraint firstItem="LGa-M9-cvh" firstAttribute="leading" secondItem="DMa-Cs-xG8" secondAttribute="leading" id="Z4v-md-bhL"/>
                            </constraints>
                        </view>
                    </subviews>
                    <constraints>
                        <constraint firstItem="0FM-Nr-bC0" firstAttribute="width" secondItem="X7d-u9-996" secondAttribute="width" id="4kl-xt-ADW"/>
                        <constraint firstItem="0FM-Nr-bC0" firstAttribute="height" secondItem="X7d-u9-996" secondAttribute="height" id="An2-7b-ZjL"/>
                        <constraint firstItem="rtN-76-P9e" firstAttribute="width" secondItem="0FM-Nr-bC0" secondAttribute="width" id="HCs-RA-6uc"/>
                        <constraint firstItem="DMa-Cs-xG8" firstAttribute="width" secondItem="0FM-Nr-bC0" secondAttribute="width" id="Hez-sV-g8A"/>
                        <constraint firstItem="rtN-76-P9e" firstAttribute="height" secondItem="0FM-Nr-bC0" secondAttribute="height" id="NBX-hP-gzh"/>
                        <constraint firstItem="0FM-Nr-bC0" firstAttribute="leading" secondItem="Eg5-ec-LrD" secondAttribute="leading" constant="12" id="OBE-2C-IxQ"/>
                        <constraint firstItem="DMa-Cs-xG8" firstAttribute="height" secondItem="0FM-Nr-bC0" secondAttribute="height" id="XeB-6b-ALO"/>
                        <constraint firstAttribute="trailing" secondItem="0FM-Nr-bC0" secondAttribute="trailing" constant="12" id="cBG-5x-L64"/>
                    </constraints>
                </stackView>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="azQ-3Q-ir8">
                    <rect key="frame" x="0.0" y="59" width="393" height="128"/>
                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="128" id="O8Z-pl-nNS"/>
                    </constraints>
                </view>
            </subviews>
            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
            <constraints>
                <constraint firstItem="Eg5-ec-LrD" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="2x3-Om-zEx"/>
                <constraint firstItem="Eg5-ec-LrD" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="3Nr-fy-4jY"/>
                <constraint firstItem="azQ-3Q-ir8" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="P4x-pn-7aa"/>
                <constraint firstItem="Eg5-ec-LrD" firstAttribute="top" secondItem="azQ-3Q-ir8" secondAttribute="bottom" id="PTa-GO-LRS"/>
                <constraint firstItem="azQ-3Q-ir8" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="whi-wN-bdU"/>
                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="azQ-3Q-ir8" secondAttribute="trailing" id="xVB-4J-eYj"/>
            </constraints>
            <point key="canvasLocation" x="132" y="-11"/>
        </view>
    </objects>
    <resources>
        <systemColor name="systemBackgroundColor">
            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
        </systemColor>
    </resources>
</document>
