...
            clearDB: clearDatabase,
            updateCard: updateCard,
            removeCard: removeCard
        )
        
        controller = DefaultCardsScreen(coordinator: coordinator, cardList: cardList, cardviewModel: cardViewModel)
        controller?.setupToolbar(title: "Default cards")
        controller?.view.accessibilityIdentifier = "view_deault_cards"
        return controller!
    }
    
    func makeFilterModule(navController: UINavigationController, categories: Set<Category>, languages: Set<Language>) -> Coordinator {
        let filterFactory = FilterFactoryImp()
        let filterCoordinator = FilterCoordinator(navController: navController, factory: filterFactory, filterToDefaultCardsCoordinator: controller!, categories: categories, languages: languages)
...
